# Mady

./: .gitattributes  .gitignore  Cargo.toml  DONTREADME.md  INTERNAL.md  README.md  justfile  license
.github/: dependabot.yml
.github/workflows/: rust.yml
ad/src/: grad.rs  lib.rs  macros.rs  matrix.rs  tensor.rs  vector.rs
codegen/: Cargo.toml
codegen/src/: chain.rs  fold_chain.rs  macros.rs  main.rs  rfold.rs  syn.json
doc/: README.html
examples/: ann.rs  complex.rs  readme.md  s.rs
mad/: Cargo.toml
mad/src/: ad.rs  ast.rs  lib.rs  parser.rs  test.rs
mad/src/graph/: algorithm.rs  graph.rs  mod.rs
mad/src/parser/: graph.rs
mad/src/tree/: mod.rs  parse_tree.rs
mady_macro/: Cargo.toml
mady_macro/src/: ad.rs  ast.rs  lib.rs
mady_macro/src/graph/: algorithm.rs  graph.rs
mady_macro/src/parser/: block.rs  grad.rs  graph.rs  mod.rs
mady_macro/src/rewrite/: annotator.rs  chain.rs  graph.rs  linker.rs  mod.rs  parser.rs
mady_macro_core/: Cargo.toml
mady_macro_core/src/: annotator.rs  error.rs  folder.rs  generator.rs  graph.rs  lib.rs  linker.rs  parser.rs  utils.rs
mady_math/: Cargo.toml
mady_math/src/: grad.rs  lib.rs  macros.rs  matrix.rs  nalgebras.rs  ndarray.rs  stds.rs  tensor.rs
src/: lib.rs  main.rs  tests.rs
tests/: builder.rs  grad.rs  try.rs
tests/depth1/: lit.rs  ops.rs  reuse.rs
tests/fail/: unsupport.rs  unsupport.stderr
tests/syntax/: block.rs  let.rs  methodcall.rs
