[package]
authors = ["by EHY <https://github.com/organizations/MDResearch/> "]
edition = "2021"
name = "mady"
version = "0.1.0"

[dependencies.mady_math]
path = "./mady_math"

[dependencies.mady_macro]
path = "./mady_macro"

[dev-dependencies]
trybuild = "1.0.61"

[workspace]
members = [
  "mady_math",
  "mady_macro",
  "mady_macro_core",
  "codegen"
]

[features]
default = ["macro", "math"]
macro = []
math = []
