[package]
authors = ["by EHY <https://github.com/organizations/MDResearch/> "]
description = "🌲 ahead-of-time automatic differentiation"
edition = "2021"
name = "mady"
version = "0.0.1-beta"
readme = "README.md"
license = "MIT"
keywords = ["autodiff", "macro", "math"]
categories = ["Science", "Mathematics"]

[dependencies.mady_math]
path = "./mady_math"
version = "*"

[dependencies.mady_macro]
path = "./mady_macro"
version = "*"

[dev-dependencies]
trybuild = "1.0"

[workspace]
members = ["mady_math", "mady_macro", "mady_macro_core", "codegen"]

[features]
default = ["macro", "math"]
macro = []
math = []
