[package]
edition = "2021"
name = "codegen"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.37"
quote = "1.0.17"
serde_json = "1.0.80"
syn-codegen = "0.3.0"
prettyplease = "0.1"

[dependencies.syn]
features = ["full"]
version = "1.0"
