[package]
edition = "2021"
name = "codegen"
version = "0.1.0"
repository = "https://github.com/MDResearch/Mady"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
serde_json = "1.0"
syn-codegen = "0.3"
prettyplease = "0.1"

[dependencies.syn]
features = ["full"]
version = "1.0"
