[package]
edition = "2021"
name = "mady_macro_core"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.36"
quote = "1.0"

[dependencies.syn]
features = ["full", "extra-traits", "fold", "parsing"]
version = "1.0"
