[package]
edition = "2021"
name = "mady_macro_core"
version = "0.1.0-alpha"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0"
tabbycat = "0.1"
thiserror = "1.0"

[dependencies.syn]
features = ["full", "extra-traits", "fold", "parsing"]
version = "1.0"

[dependencies.proc-macro2]
features = ["span-locations"]
version = "1.0"