[package]
name = "mady_math"
version = "0.1.0-beta"
edition = "2021"
description = "🌲 mady's subpackage"
license = "MIT"
repository = "https://github.com/MDResearch/Mady"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.31"